--- a/templates/inspecoes/inspecao_form.html
+++ b/templates/inspecoes/inspecao_form.html
@@ -28,6 +28,9 @@
 
       <input type="hidden" name="latitude" id="id_latitude">
       <input type="hidden" name="longitude" id="id_longitude">
+      <div class="alert alert-warning d-none mt-2" role="alert" id="location-alert">
+        Capture a localizaÇõÇœo antes de salvar a inspeÇõÇœo.
+      </div>
 
       <div class="d-flex gap-2 mt-3">
         <button type="button" class="btn btn-outline-secondary" id="btn-capturar-localizacao">
