--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     {% block extra_head %}{% endblock %}
 </head>
-<body class="bg-light">
+<body class="bg-light" {% if user.is_authenticated %}data-user-level="{{ user.profile.role }}"{% endif %}>
     {% if user.is_authenticated %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
